--- a/dorian/dorian-ui/src/components/builder/WorkflowsModal.css
+++ b/dorian/dorian-ui/src/components/builder/WorkflowsModal.css
@@ -12,8 +12,7 @@
 
 .workflows-modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  /* Centering handled by inline style in JSX to avoid framer-motion conflicts */
   width: 90%;
   max-width: 700px;
   max-height: 80vh;
